[Glitch] Fix videos being improperly positioned on safari
Port 0eed06073f6d80bd67ee87ef7d3b682943345e4b to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/media.scss
+++ b/app/javascript/flavours/glitch/styles/components/media.scss
@@ -96,13 +96,6 @@
     grid-column: span 2;
   }
 
-  &.standalone {
-    .media-gallery__item-gifv-thumbnail {
-      transform: none;
-      top: 0;
-    }
-  }
-
   .full-width & {
     border-radius: 0;
   }
@@ -161,8 +154,6 @@
   cursor: zoom-in;
   height: 100%;
   width: 100%;
-  position: relative;
-  z-index: 1;
   object-fit: contain;
   user-select: none;
 
@@ -455,6 +446,8 @@
   border-radius: 4px;
   box-sizing: border-box;
   color: $white;
+  display: flex;
+  align-items: center;
 
   &.editable {
     border-radius: 0;
@@ -497,9 +490,6 @@
   &.inline {
     video {
       object-fit: contain;
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
     }
   }
 
